# metaspace-converter

./: .buildinfo  .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  api.html  examples.html  genindex.html  index.html  metaspace_converter.anndata_to_array.html  metaspace_converter.colocalization.html  metaspace_converter.constants.html  metaspace_converter.html  metaspace_converter.to_anndata.html  metaspace_converter.to_spatialdata.html  metaspace_converter.utils.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.github/workflows/: docs.yml  release.yml  tests.yml
_modules/: index.html
_modules/metaspace_converter/: anndata_to_array.html  colocalization.html  constants.html  to_anndata.html  to_spatialdata.html  utils.html
_sources/: api.rst.txt  examples.rst.txt  index.rst.txt  metaspace_converter.anndata_to_array.rst.txt  metaspace_converter.colocalization.rst.txt  metaspace_converter.constants.rst.txt  metaspace_converter.rst.txt  metaspace_converter.to_anndata.rst.txt  metaspace_converter.to_spatialdata.rst.txt  metaspace_converter.utils.rst.txt  modules.rst.txt
docs/: api.rst  conf.py  examples.rst  index.rst  metaspace2anndata.rst
docs/_build/doctrees/: environment.pickle  index.doctree  metaspace2anndata.doctree  modules.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  metaspace2anndata.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/metaspace2anndata/: converter.html  utils.html
docs/_build/html/_sources/: modules.rst.txt
metaspace2anndata/: __init__.py  converter.py  utils.py
metaspace2anndata.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
metaspace_converter/: __init__.py  anndata_to_array.py  colocalization.py  constants.py  to_anndata.py  to_spatialdata.py  utils.py
metaspace_converter/tests/: anndata_to_array_test.py  colocalization_test.py  to_anndata_test.py  to_spatialdata_test.py  utils_test.py
