[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metaspace-converter"
version = "0.1.0"
authors = [
    {name = "Tim Daniel Rose", email = "tim.rose@embl.de"},
    {name = "Andreas Eisenbarth", email = "andreas.eisenbarth@embl.de"},
]
description = "Convert Metaspace datasets to AnnData"
requires-python = ">=3.8"
license = {text = "GPLv3"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3"
]
dependencies = [
    "anndata>=0.9.2",
    "metaspace2020>=2.0.6",
    "numpy",
    "pandas",
    "spatial-image>=0.3",
    "spatialdata>=0.0.15",
]
dynamic = ["readme"]

[project.optional-dependencies]
test = [
    "multiscale-spatial-image>=0.11",
    "pytest>=7.2",
]

[project.urls]
Repository = "https://github.com/tdrose/metaspace-converter"
Source = "https://git.embl.de/grp-alexandrov/metaspace-to-anndata"
# Publication = ""

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.exclude-package-data]
"*" = ["metaspace_converter/tests"]

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}

[tool.black]
line-length = 100
target-version = ['py38']
skip-magic-trailing-comma = true
include = '\.(pyi?|ipynb)$'
exclude = '''
^/(
  (
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.pytest_cache
    | build
    | dist
  )
)/
'''

[tool.isort]
combine_as_imports = true
filter_files = true
line_length = 100
profile = "black"

[tool.pycln]
all = true

[tool.pytest.ini_options]
minversion = "6.0"
# CLI options: Show extra test summary for all except passed; quiet
# Report the duration of the slowest test functions (slower than a minimum number of seconds).
addopts = "-ra --quiet --durations=5 --durations-min=1.0"
