[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metaspace-converter"
version = "1.1.0"
authors = [
    {name = "Tim Daniel Rose", email = "tim.rose@embl.de"},
    {name = "Andreas Eisenbarth", email = "andreas.eisenbarth@embl.de"},
]
description = "Convert Metaspace datasets to AnnData"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "anndata>=0.9.2",
    "metaspace2020>=2.0.6",
    "numpy",
    "pandas",
    "spatial-image>=0.3",
    "spatialdata>=0.0.15",
]
dynamic = ["readme"]

[project.optional-dependencies]
test = [
    "multiscale-spatial-image>=0.11",
    "pytest>=7.2",
    "pytest-cov>=4.1",
]
docs = [
    "sphinx~=7.2",
    "sphinx-autodoc-typehints",
    "sphinx-codeautolink",
    "sphinx-copybutton",
    "sphinx-rtd-theme",
#    # For notebooks
#    "myst-nb",
#    "ipython~=8.6.0",
    # For example code in documentation
    "scanpy~=1.9.6",
    "spatialdata-plot~=0.0.6",
    "squidpy~=1.3.1",
]

[project.urls]
Repository = "https://github.com/metaspace2020/metaspace-converter"
Source = "https://github.com/metaspace2020/metaspace-converter"
Documentation = "https://metaspace2020.github.io/metaspace-converter/"
# Publication = ""

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.exclude-package-data]
"*" = ["metaspace_converter/tests"]

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}

[tool.black]
line-length = 100
target-version = ['py38']
skip-magic-trailing-comma = true
include = '\.(pyi?|ipynb)$'
exclude = '''
^/(
  (
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.pytest_cache
    | build
    | dist
  )
)/
'''

[tool.isort]
combine_as_imports = true
filter_files = true
line_length = 100
profile = "black"

[tool.pycln]
all = true

[tool.pytest.ini_options]
minversion = "6.0"
# CLI options:
# -ra: Show extra test summary for (a)ll except passed
# --quiet: Decrease verbosity
# --doctest*: Run example code in docs
addopts = '-ra --quiet'
filterwarnings = [
    # Triggered by spatialdata==0.0.15
    "ignore:is_categorical_dtype is deprecated and will be removed in a future version:FutureWarning:spatialdata",
    # Triggered by xarray-schema==0.0.3
    "ignore:pkg_resources is deprecated as an API:DeprecationWarning:xarray_schema",
    # Triggered by matplotlib<3.8.0, xarray-schema==0.0.3
    "ignore:Deprecated call to `pkg_resources.declare_namespace:DeprecationWarning:pkg_resources",
]
